--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
           <artifactId>junit</artifactId>
           <version>RELEASE</version>
       </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>RELEASE</version>
+      </dependency>
   </dependencies>
 
   <build>
